# learn

./: README.md
web/backend/Django/ClothCart/: .gitignore  Dockerfile  README.md  docker-compose.yml  env-example  pyproject.toml  test.py
web/backend/Django/ClothCart/enf/cart/: admin.py  cart.py  forms.py  middleware.py  models.py  urls.py  views.py
web/backend/Django/ClothCart/enf/cart/migrations/: 0001_initial.py
web/backend/Django/ClothCart/enf/cart/templatetags/: cart_tags.py
web/backend/Django/ClothCart/enf/enf/: settings.py  urls.py
web/backend/Django/ClothCart/enf/main_shop/: apps.py  models.py  urls.py  views.py
web/backend/Django/ClothCart/enf/main_shop/migrations/: 0001_initial.py  0002_alter_productsize_product.py
web/backend/Django/ClothCart/enf/main_shop/templates/main_shop/: base.html  catalog.html  filter_modal.html  home_content.html  product_detail.html  search_button.html  search_input.html
web/backend/Django/ClothCart/enf/orders/: admin.py  forms.py  models.py  urls.py  views.py
web/backend/Django/ClothCart/enf/orders/migrations/: 0001_initial.py  0002_rename_stripe_payment_intend_id_order_stripe_payment_intent_id.py
web/backend/Django/ClothCart/enf/orders/templates/orders/: checkout.html  checkout_content.html  empty_cart.html
web/backend/Django/ClothCart/enf/payment/: urls.py  views.py
web/backend/Django/ClothCart/enf/payment/templates/payment/: stripe_cancel.html  (+2 more)
web/backend/Django/ClothCart/enf/users/: forms.py  models.py  urls.py  views.py
web/backend/Django/ClothCart/enf/users/migrations/: 0001_initial.py
(+2 files in other folders)
