[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clothcart"
version = "0.1.0"
description = "Django интернет-магазин одежды"
authors = [
    { name = "maxim", email = "your-email@example.com" }
]
dependencies = [
    "Django>=4.2.7",
    "Pillow>=10.0.1",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.7",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=4.2.0",
    "django-extensions>=3.2.0",
    "ipython>=8.0.0",
]
prod = [
    "gunicorn>=21.0.0",
    "whitenoise>=6.0.0",
]

[tool.django]
settings_module = "clothcart.settings"

[tool.black]
line-length = 88
target-version = ['py310']