[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enf"
version = "0.1.0"
description = "Django интернет-магазин одежды"
authors = [
    { name = "maxim", email = "your-email@example.com" }
]
dependencies = [
    "Django==5.2.7",
    "pillow==11.3.0",
    "python-dotenv==1.1.1",
    "psycopg2-binary==2.9.10",
    "requests==2.32.5",
    "stripe==13.0.1",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=4.2.0",
    "django-extensions>=3.2.0",
    "ipython>=8.0.0",
]

prod = [
    "gunicorn==23.0.0",
    "whitenoise>=6.0.0",
]